--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@aave/contract-helpers": "^1.30.5",
     "@bgd-labs/aave-address-book": "^4.7.4",
+    "@kamino-finance/klend-sdk": "^5.10.13",
     "@solana/web3.js": "^1.98.0",
     "bs58": "^6.0.0",
     "ethers": "^5.7.2",
