--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@aave/contract-helpers": "^1.30.5",
     "@bgd-labs/aave-address-book": "^4.7.4",
     "@solana/web3.js": "^1.98.0",
+    "@solendprotocol/solend-sdk": "^0.13.42",
     "bs58": "^6.0.0",
     "ethers": "^5.7.2",
     "zod": "^3.24.1"
