--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@aave/contract-helpers": "^1.30.5",
         "@bgd-labs/aave-address-book": "^4.7.4",
         "@coral-xyz/anchor": "^0.30.1",
+        "@langchain/core": "^0.3.37",
         "@meteora-ag/dlmm": "^1.3.9",
         "@solana/web3.js": "^1.98.0",
         "@vitest/eslint-plugin": "^1.1.25",
