--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
+# To run examples
+OPENAI_API_KEY=
+
+# To enable evm actions
 EVM_PRIVATE_KEY=
+
+# To enable solana actions
 SOLANA_PRIVATE_KEY=
-SOLANA_RPC_URL=
-HELIUS_API_KEY=
+SOLANA_RPC_URL= # Optional
+HELIUS_API_KEY= # Optional
+
+# To enable the cookie swarm api
+COOKIE_API_KEY=
