--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint": "eslint src",
         "prepare": "npm run build",
         "format": "prettier -c .prettierrc --write \"**/*.{ts,js,cjs,json,md}\"",
-        "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\""
+        "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\"",
+        "start:chatagent": "ts-node examples/chat-agent.ts"
     },
     "keywords": [
         "defi",
@@ -42,13 +43,16 @@
         "typescript": "^5.0.0",
         "viem": "2.21.58",
         "vitest": "^1.0.0",
-        "zod": "^3.22.0"
+        "zod": "^3.22.0",
+        "ts-node": "^10.9.2"
     },
     "dependencies": {
         "@aave/contract-helpers": "^1.30.5",
         "@bgd-labs/aave-address-book": "^4.7.4",
         "@coral-xyz/anchor": "^0.30.1",
         "@langchain/core": "^0.3.37",
+        "@langchain/langgraph": "^0.2.39",
+        "@langchain/openai": "^0.3.17",
         "@meteora-ag/dlmm": "^1.3.9",
         "@solana/spl-token-registry": "^0.2.4574",
         "@solana/web3.js": "^1.98.0",
