--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "pnpm format && pnpm lint && tsup",
         "test": "vitest",
-        "lint": "eslint src",
+        "lint": "eslint src --max-warnings 0",
         "prepare": "npm run build",
         "format": "prettier -c .prettierrc --write \"**/*.{ts,js,cjs,json,md}\"",
         "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\"",
