--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "ts-node": "^10.9.2",
         "tsup": "8.3.5",
         "typescript": "^5.0.0",
-        "vitest": "^1.0.0",
+        "vitest": "3.0.8",
         "zod": "^3.22.0"
     },
     "dependencies": {
