Build pnpm succefully

--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
         "@lifi/types": "16.3.0",
         "@modelcontextprotocol/sdk": "^1.7.0",
         "@types/bn.js": "^5.1.6",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/node": "^22.13.13",
+        "@types/supertest": "^6.0.3",
         "@typescript-eslint/eslint-plugin": "^8.24.1",
         "@typescript-eslint/parser": "^8.24.1",
         "cors": "^2.8.5",
@@ -46,6 +50,7 @@
         "node-cache": "^5.1.2",
         "raw-body": "^3.0.0",
         "rimraf": "^5.0.10",
+        "supertest": "^7.1.0",
         "ts-node": "^10.9.2",
         "tsup": "8.3.5",
         "typescript": "^5.0.0",
