--- a/examples/mcp-server/package.json
+++ b/examples/mcp-server/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "edwin-mcp-server",
-  "version": "0.1.0",
-  "description": "MCP server example for Edwin SDK",
-  "main": "src/index.ts",
-  "scripts": {
-    "start": "ts-node src/examples/basic-server.ts",
-    "test": "vitest run",
-    "dev": "ts-node-dev --respawn src/examples/basic-server.ts",
-    "build": "tsc"
-  },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.7.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "raw-body": "^2.5.2",
-    "zod-to-json-schema": "^3.22.3",
-    "edwin-sdk": "file:../.."
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.16",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "private": true
+    "name": "edwin-mcp-server",
+    "version": "0.1.0",
+    "description": "MCP server example for Edwin SDK",
+    "main": "src/index.ts",
+    "scripts": {
+        "start": "ts-node src/examples/basic-server.ts",
+        "test": "vitest run",
+        "dev": "ts-node-dev --respawn src/examples/basic-server.ts",
+        "build": "tsc"
+    },
+    "dependencies": {
+        "@modelcontextprotocol/sdk": "^1.7.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.1",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "raw-body": "^2.5.2",
+        "zod": "^3.22.4",
+        "zod-to-json-schema": "^3.22.3",
+        "edwin-sdk": "workspace:*"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.11.16",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.3.3",
+        "vitest": "^1.2.2"
+    },
+    "engines": {
+        "node": ">=18.0.0"
+    },
+    "private": true
 }
