--- a/examples/mcp-server/package.json
+++ b/examples/mcp-server/package.json
@@ -4,21 +4,21 @@
     "description": "MCP server example for Edwin SDK",
     "main": "src/index.ts",
     "scripts": {
-        "start": "ts-node src/examples/basic-server.ts",
+        "start": "ts-node examples/basic-server.ts",
         "test": "vitest run",
-        "dev": "ts-node-dev --respawn src/examples/basic-server.ts",
+        "dev": "ts-node-dev --respawn examples/basic-server.ts",
         "build": "tsup"
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.7.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
+        "edwin-sdk": "file:../..",
         "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
         "raw-body": "^2.5.2",
         "zod": "^3.22.4",
-        "zod-to-json-schema": "^3.22.3",
-        "edwin-sdk": "file:../.."
+        "zod-to-json-schema": "^3.22.3"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
