--- a/examples/mcp-server/package.json
+++ b/examples/mcp-server/package.json
@@ -25,6 +25,7 @@
         "@types/node": "^20.11.16",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
+        "tsup": "^8.0.1",
         "typescript": "^5.3.3",
         "vitest": "^1.2.2"
     },
