--- a/examples/mcp-server/tsconfig.json
+++ b/examples/mcp-server/tsconfig.json
@@ -7,7 +7,5 @@
         "composite": true
     },
     "include": ["src/**/*"],
-    "references": [
-        { "path": "../.." }
-    ]
+    "references": [{ "path": "../.." }]
 }
