Add check wallet balances tool

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "ccxt": "^4.4.63",
         "eslint-config-prettier": "^10.0.1",
         "ethers": "^5.7.2",
+        "helius-sdk": "^1.5.1",
         "hyperliquid": "^1.6.2",
         "prettier": "^3.4.2",
         "viem": "^2.23.5",
