Add integration tests for SaucerSwap and Stader plugins
- Implemented comprehensive test suite for SaucerSwap including service initialization, parameter validation, quote operations, swap operations, and error handling.
- Added integration tests for Stader service covering staking, unstaking, withdrawal, and balance queries.
- Included environment variable validation and instructions for running tests.
- Enhanced error handling and logging for better test diagnostics.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\"",
         "start:chatagent": "ts-node examples/cli-chat-agent/chat-agent.ts",
         "start:mcp-server": "ts-node examples/mcp-server/src/index.ts",
+        "example:hedera": "ts-node examples/hedera-plugins-usage.ts",
+        "example:hedera:js": "node examples/hedera-plugins-usage.js",
         "clean": "rimraf node_modules"
     },
     "keywords": [
