update performance issues

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,12 @@ EVM_PRIVATE_KEY=
 SOLANA_PRIVATE_KEY=
 SOLANA_RPC_URL= # Optional
 
+# To enable hedera actions
+HEDERA_ACCOUNT_ID=
+HEDERA_PRIVATE_KEY=
+HEDERA_NETWORK= # mainnet or testnet
+HEDERA_RPC_URL= # Premium RPC URL (e.g., https://mainnet.hedera.validationcloud.io/v1/YOUR_API_KEY)
+
 # To enable the cookie swarm api
 COOKIE_API_KEY=
 
